data/Java/04-string-access-by-index/5/[M]Error.txt
https://stackoverflow.com/questions/26954833/error-array-required-but-string-found
a.java:18: error: array required, but String found
            System.out.println(s[0]);
                                ^